--- a/style.css
+++ b/style.css
@@ -12,11 +12,13 @@
 }
 
 h1 {
-  color: rgb(143, 27, 27);
+  color: #b83f45;
   text-align: center;
   padding-top: 15px;
-  font-size: 70px;
+  font-size: 80px;
+  font-weight: 200;
   padding-bottom: 20px;
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;;
 }
 
 ul {
@@ -29,8 +31,8 @@ ul {
   border: solid 2px rgb(174, 169, 169);
   height: 80px;
   width: 500px;
-  text-align: center;
-  font-size: 30px;
+  padding-left: 10px;
+  font: 24px Helvetica Neue, Helvetica, Arial, sans-serif;
   font-style: italic;
   vertical-align: middle;
 }
@@ -49,6 +51,8 @@ i {
   vertical-align: middle;
   margin-left: 5px;
   margin-right: 5px;
+  font-size: 16px;
+  margin-left: auto;
 }
 
 li {
@@ -61,19 +65,26 @@ li {
   min-height: 60px;
   width: 500px;
   padding: 10px;
-  font-size: 30px;
+  font-size: 24px;
+  font-weight: 400;
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;;
 }
 
 .input-checkbox {
   vertical-align: middle;
-  height: 20px;
-  width: 20px;
+  min-height: 20px;
+  min-width: 20px;
 }
 
-.filters {
+footer {
+  align-items: center;
   border-bottom: solid 2px rgb(174, 169, 169);
   border-right: solid 2px rgb(174, 169, 169);
   border-left: solid 2px rgb(174, 169, 169);
+  width: 500px;
+}
+
+.filters {
   height: 40px;
   width: 500px;
   display: flex;
@@ -83,12 +94,15 @@ li {
 
 #all, #active, #completed {
   cursor: pointer;
-  padding-left: 5px;
+  padding: 2px 5px;
 }
 
-#all:active, #active:active, #completed:active {
-  color: rgb(82, 81, 81);
-  color: rgb(229, 116, 116);
+.active-button {
+  border: 1px solid rgb(143, 27, 27);
+}
+
+#active-todos, #all-filters, #empty {
+  flex: 1;
 }
 
 
